# ml-poisonous-mushrooms

./: .gitattributes  .gitignore  Makefile  README.md  __init__.py  __main__.ipynb  __main__.py  cleaners.py  data_load.py  debug.py  engineering_features.py  features.py  hyper_opt.py  models.py  pipeline.py  pipelines.py  pyproject.toml  run_v2.ipynb
.devcontainer/: devcontainer.json
data/: __init__.py
lib/ensemble/: EnsembleConfigDict.py  ensemble_analysis.py  ensemble_creation.py  ensemble_setup.py  ensemble_setup2.py  ensemble_testing.py
lib/features/: FeatureManager.py  FeatureSet.py
lib/logger/: __init__.py
lib/models/: EnsembleModel.py  EnsembleModel2.py  HyperOptCombination.py  HyperOptManager.py  HyperOptResult.py  HyperOptResultDict.py  ModelManager.py  ModelWrapper.py
lib/optymization/: EarlyStoppingCallback.py  TrialParamWrapper.py  analysis_setup.py  hyper_setup.py  optimization_study.py  parrarel_optimization.py  results.py
lib/pipelines/: ProcessingPipelineWrapper.py
lib/prediction/: prediction_setup.py
lib/utils/: read_existing_models.py
logger/: __init__.py
ml_poisonous_muschrooms/: debug.py  hyper_opt.py
ml_poisonous_muschrooms/engineering/: engineering_features.py
ml_poisonous_muschrooms/utils/: features.py  models.py  pipelines.py
ml_poisonous_mushrooms/: analysis.py  analysis_task.py  debug.py  debug_task.py  ensemble.py  ensemble_config.json  ensemble_task.py  ensemble_task2.py  hyper_opt.py  hyper_task.py  prediction_task.py
ml_poisonous_mushrooms/analysis/: analysis_ensemble.py  analysis_hyper.py
models/: __init__.py  existing_models.py
tests/: ensemble_model_prediction_test.py  ensemble_model_test.py  processing_pipeline_test.py
(+66 files in other folders)
