[tool.poetry]
name = "ml-poisonous-mushrooms"
version = "0.1.0"
description = ""
authors = ["Damian Trafialek <damian.trafialek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
optuna = "^3.6.1"
scikit-learn = "^1.5.1"
joblib = "^1.4.2"
lightgbm = "^4.5.0"
poethepoet = "^0.27.0"

[tool.poe.tasks]
hyper_opt = "poetry run python ml_poisonous_mushrooms/hyper_opt.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
