[tool.poetry]
name = "ml-poisonous-mushrooms"
version = "0.1.0"
description = ""
authors = ["Damian Trafialek <damian.trafialek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
optuna = "^3.6.1"
scikit-learn = "^1.5.1"
joblib = "^1.4.2"
lightgbm = "^4.5.0"
poethepoet = "^0.27.0"
xgboost = "^2.1.1"
plotly = "^5.23.0"
pytest = "^8.3.3"
catboost = "^1.2.7"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.poe.tasks]
hyper = "poetry run python ml_poisonous_mushrooms/hyper_task.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
